syntax = "proto3";

option go_package = "." ;

service NotificationService {
    rpc SendNotification (NotificationReq) returns (NotifactionRes);
}

message NotifactionRes{
    string message = 1;
}

message NotificationReq {
    string userEmail = 1;
    string subject = 2;
    string message = 3;
}